tests/ui/fmt/issue-86085.stderr
error: invalid format string: unmatched `}` found
  --> $DIR/issue-86085.rs:4:12
   |
LL | format ! ( concat ! ( r#"lJð¿Ã†ï¿½.ð¿ï¿½"# , "r} {}" )     ) ;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |            |
   |            unmatched `}` in format string
   |            in this macro invocation
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `concat!`
   |
   = note: if you intended to print `}`, you can escape it using `}}`

error: aborting due to previous error

